// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deployPackages function updates the package.json files of the sibling packages 1`] = `
"{
    \\"description\\": \\"A sample package @thm/package1\\",
    \\"felibPackageGroup\\": \\"components\\",
    \\"name\\": \\"@thm/package1\\",
    \\"version\\": \\"1.0.0\\",
    \\"dependencies\\": {
        \\"@thm/package2\\": \\"^0.3.0\\",
        \\"@thm/package3\\": \\"^2.3.1\\",
        \\"lodash\\": \\"*\\"
    },
    \\"publishConfig\\": {}
}"
`;

exports[`deployPackages function updates the package.json files of the sibling packages 2`] = `
"{
    \\"description\\": \\"A sample package @thm/package2\\",
    \\"felibPackageGroup\\": \\"components\\",
    \\"name\\": \\"@thm/package2\\",
    \\"version\\": \\"0.3.0\\",
    \\"dependencies\\": {
        \\"@thm/package3\\": \\"^2.3.1\\"
    },
    \\"publishConfig\\": {}
}"
`;

exports[`deployPackages function updates the package.json files of the sibling packages 3`] = `
"{
    \\"description\\": \\"A sample package @thm/package3\\",
    \\"felibPackageGroup\\": \\"components\\",
    \\"name\\": \\"@thm/package3\\",
    \\"version\\": \\"2.3.1\\",
    \\"dependencies\\": {
        \\"dayum\\": \\"*\\"
    },
    \\"publishConfig\\": {}
}"
`;

exports[`deployPackages function updates the package.json publish config if given 1`] = `
"{
    \\"description\\": \\"A sample package @thm/package1\\",
    \\"felibPackageGroup\\": \\"components\\",
    \\"name\\": \\"@thm/package1\\",
    \\"version\\": \\"1.0.0\\",
    \\"dependencies\\": {
        \\"@thm/package2\\": \\"^0.3.0\\",
        \\"@thm/package3\\": \\"^2.3.1\\",
        \\"lodash\\": \\"*\\"
    },
    \\"publishConfig\\": {
        \\"registry\\": \\"http://example.com/production-registry/\\"
    }
}"
`;

exports[`deployPackages function updates the package.json publish config if given 2`] = `
"{
    \\"description\\": \\"A sample package @thm/package2\\",
    \\"felibPackageGroup\\": \\"components\\",
    \\"name\\": \\"@thm/package2\\",
    \\"version\\": \\"0.3.0\\",
    \\"dependencies\\": {
        \\"@thm/package3\\": \\"^2.3.1\\"
    },
    \\"publishConfig\\": {
        \\"registry\\": \\"http://example.com/production-registry/\\"
    }
}"
`;

exports[`deployPackages function updates the package.json publish config if given 3`] = `
"{
    \\"description\\": \\"A sample package @thm/package3\\",
    \\"felibPackageGroup\\": \\"components\\",
    \\"name\\": \\"@thm/package3\\",
    \\"version\\": \\"2.3.1\\",
    \\"dependencies\\": {
        \\"dayum\\": \\"*\\"
    },
    \\"publishConfig\\": {
        \\"registry\\": \\"http://example.com/production-registry/\\"
    }
}"
`;

exports[`deployPackages function when it succeeds logs a list of packages 1`] = `
Array [
  Object {
    "description": "A sample package @thm/package1",
    "group": "components",
    "name": "@thm/package1",
    "version": "1.0.0",
  },
  Object {
    "description": "A sample package @thm/package2",
    "group": "components",
    "name": "@thm/package2",
    "version": "0.3.0",
  },
  Object {
    "description": "A sample package @thm/package3",
    "group": "components",
    "name": "@thm/package3",
    "version": "2.3.1",
  },
]
`;
